--- a/sonyaath.html
+++ b/sonyaath.html
@@ -77,7 +77,7 @@
         </button>
       </div>
     </div>
-    <video src="https://futurazara.6gvv84i0qz.workers.dev/0:/female%204%20otttbangkla.lol.mkv">
+    <video src="https://api.iptvbd.xyz/api/sony_aath.m3u8">
       <track kind="captions" srclang="en" src="assets/subtitles.vtt">
     </video>
   </div>
