--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         var playerInstance = jwplayer("my-video");
 
         playerInstance.setup({
-            file: "https://futurazara.6gvv84i0qz.workers.dev/0:/female%204%20otttbangkla.lol.mkv",
+            file: "https://d75dqofg5kmfk.cloudfront.net/bpk-tv/Musicindia/default/musicindia-audio_208482_und=208000-video=1087600.m3u8",
             width: "100%",
             height: "100%",
             aspectratio: "16:9",
