--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         var playerInstance = jwplayer("my-video");
 
         playerInstance.setup({
-            file: "https://d75dqofg5kmfk.cloudfront.net/bpk-tv/Musicindia/default/musicindia-audio_208482_und=208000-video=1087600.m3u8",
+            file: "http://172.20.2.5:8082/SANGIT-BANGLA/index.m3u8?token=cbe1469027f636f1c8c97e28319bffa3203074c8-e44d3b2a41f3dff2e6a8d9bbc951d47b-1730038829-1730028029",
             width: "100%",
             height: "100%",
             aspectratio: "16:9",
