--- a/sangeet.html
+++ b/sangeet.html
@@ -18,7 +18,10 @@
 </head>
 
 <body>
-
+<div id="loading" class="loading">
+<div class="loading-text">
+<span class="loading-text-words">SHIMUL AHMED</span>
+</div>
     <div id="my-video"></div>
 
     <script type="text/javascript">
