--- a/sangeet.html
+++ b/sangeet.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>FERDOS BHAI</title>
+    <title>SHIMUL AHMED</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="description" content="ENJOY FREE LIVE TV">
     <meta name="keywords" content="LIVETV, SPORTS, MOVIES, MUSIC">
@@ -18,10 +18,7 @@
 </head>
 
 <body>
-<div id="loading" class="loading">
-<div class="loading-text">
-<span class="loading-text-words">SHIMUL AHMED</span>
-</div>
+
     <div id="my-video"></div>
 
     <script type="text/javascript">
